--- a/index.html
+++ b/index.html
@@ -8,19 +8,28 @@
     <title>Resume</title>
 </head>
 <body>
+    <div class="address">
     250-A, Derbishev str, Karakol
 Kyrgyz Republic,722200
 +996556521138 (WhatsApp)
 tzhanadylov@gmail.com 
 Tynchtykbek Zhanadylov
-SUMMARY		•	Background in International Relations/Studies 
-•	Google Certified Teacher (First in Central Asia)
-•	IT in Education, Tourism Marketing expert
-•	Business owner at Happy Nomads Village Yurt Camp in Karakol, Kyrgyzstan: www.happynomads.info
-LANGUAGES		English (Professional working proficiency)
-Russian (Native or bilingual proficiency)
-Kyrgyz  (Native or bilingual proficiency)
-EXPERIENCE		Educational Technology Trainer (part time), "Steps to Success" Public Association, Karakol, Kyrgyz Republic
+</div>
+<br>
+<b>SUMMARY</b>
+<li>Background in International Relations/Studies </li>
+<li>Google Certified Teacher (First in Central Asia)</li>
+<li>IT in Education, Tourism Marketing expert</li>
+<li>Business owner at Happy Nomads Village Yurt Camp in Karakol, Kyrgyzstan: www.happynomads.info</li>
+<br>
+<b>LANGUAGES</b>
+<li>English (Professional working proficiency)</li>
+<li>Russian (Native or bilingual proficiency)</li>
+<li>Kyrgyz  (Native or bilingual proficiency)</li>
+<br>
+<b>EXPERIENCE</b>
+<li>Educational Technology Trainer (part time), "Steps to Success" Public Association, Karakol, Kyrgyz Republic</li>
+
 October 2012 – Present
 •	Responsible for the work of the project: IT Academy Karakol. 
 •	Working with trainers, academy students.
